# muninn

./: .gitignore  .pylintrc  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: codeql.yml  publish.yml  pylint.yml
docs/superpowers/plans/: 2026-04-08-pypi-packaging.md
docs/superpowers/specs/: 2026-04-08-pypi-packaging-design.md
memory-read/: SKILL.md
memory-write/: SKILL.md
shared/: muninn.py  muninn_chroma.py  muninn_embed.py  muninn_project.py
shared/tests/: test_delete_symbols_by_file.py  test_format_output.py  test_global_memory.py  test_muninn_chroma.py  test_muninn_e2e.py  test_muninn_embed.py  test_muninn_mcp.py  test_muninn_project.py  test_symbol_collection_name.py  test_symbol_format.py  test_symbol_handlers.py
src/muninn_mcp/: chroma.py  cli.py  embed.py  project.py  server.py
src/muninn_mcp/skills/memory-read/: SKILL.md
src/muninn_mcp/skills/symbol-search/: SKILL.md
tests/: test_cli.py  test_delete_symbols_by_file.py  test_format_output.py  test_global_memory.py  test_muninn_chroma.py  test_muninn_e2e.py  test_muninn_embed.py  test_muninn_mcp.py  test_muninn_project.py  test_symbol_collection_name.py  test_symbol_format.py  test_symbol_handlers.py
