[project]
name = "muninn-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["mcp[cli]", "chromadb", "httpx"]

[project.scripts]
muninn-mcp = "muninn_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muninn_mcp"]

[dependency-groups]
dev = ["pytest", "respx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
