[project]
name = "muninn-remembers"
version = "0.1.0"
description = "Semantic memory layer for OpenCode AI coding sessions"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["mcp[cli]", "chromadb", "httpx"]

[project.scripts]
muninn-remembers = "muninn_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muninn_mcp"]

[dependency-groups]
dev = ["pytest", "respx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
